# jolrobles

./: Dockerfile  Procfile  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  render.yaml  requirements.txt
home/: admin.py  forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_blog_detalle_principal.py  0003_blog_imagen_2.py  0004_proyecto.py  0005_auto_20230806_1708.py  0006_alter_proyecto_empresa.py  0007_proyecto_tipo_proyecto.py  0008_quiensoy.py  0009_respuestablog.py  0010_respuestablog_fecha_hora.py  0011_alter_respuestablog_blog.py  0012_alter_respuestablog_blog.py  0013_quiensoy_img_perfil.py  0014_blog_imagen_portada.py  0015_alter_proyecto_imagen.py  0016_alter_proyecto_imagen.py  0017_auto_20240623_2241.py
jolrobles/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: owl-carousel.css  templatemo-klassy-cafe.css
templates/: base.html  footer.html  header.html  index.html
templates/home/: blog.html  blog_list.html  contacto.html  podcast.html  proyecto_detail.html  proyectos.html  register.html
